# sgsql

./: .gitignore  README.md  RELEASE_CI_NOTES.md  connection-manager.html  index.html  package.json  sgsql-plan.md  sidecar-rust-migration-plan.md  the gap analysis.md  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
scripts/: build-macos-icons.mjs  setup-codesign-identity.sh
sidecar/: index.ts
sidecar/lib/: friendlyError.ts  pool.ts  queryLogHub.ts  queryTrace.ts  sshTunnel.ts  types.ts
sidecar/routes/: connections.ts  health.ts  schema.ts
src/: App.tsx  connection-manager.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/AppIcon.icon/: icon.json
src-tauri/sidecar/: Cargo.toml
src-tauri/sidecar/src/: db.rs  error.rs  main.rs  pool.rs  ssh.rs  trace.rs  types.rs  value.rs
src-tauri/sidecar/src/routes/: apply.rs  cancel.rs  connections.rs  health.rs  mod.rs  query.rs  schema.rs  ws.rs
src-tauri/src/: config.rs  encrypted_store.rs  keychain.rs  lib.rs  macos_icon.rs
src/components/: ChangeHistoryPopup.tsx  CommandPalette.tsx  ConnectionManager.tsx  ConnectionManagerWindow.tsx  CreateTableModal.tsx  DataTable.tsx  DetailPanel.tsx  FilterPanel.tsx  KeyboardShortcutsModal.tsx  MonacoSqlEditor.tsx  QueryConsole.tsx  QueryEditor.tsx  ResultGrid.tsx  SchemaEditor.tsx  (+2 more)
tests/: commandPaletteCache.test.ts  connectionFolderState.test.ts  connectionOrder.test.ts  connectionUrl.test.ts  connectionsStore.test.ts  defaultOrder.test.ts  editRefresh.test.ts  friendlyError.test.ts  fuzzySearch.test.ts  pool.test.ts  queryTrace.test.ts  schemaApply.test.ts  schemaCache.test.ts  schemaCatalog.test.ts  schemaDdl.test.ts  scrollVisibility.test.ts  searchLru.test.ts  sqlAutocomplete.test.ts  tableDataCache.test.ts
(+32 files in other folders)
