[package]
name = "SGSql"
version = "1.3.3"
description = "Stupidly Good SQL"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSImage"] }
objc2-foundation = { version = "0.3", features = ["NSData", "NSNotification", "NSProcessInfo", "NSString", "NSUserDefaults", "block2"] }
